--- a/Res_meter/Res_Meter/billing/templates/billing/invoice_list.html
+++ b/Res_meter/Res_Meter/billing/templates/billing/invoice_list.html
@@ -61,7 +61,7 @@
                             </td>
                             <td>{{ invoice.created_at|date:"M d, Y" }}</td>
                             <td>
-                                <button class="btn btn-sm btn-primary">View</button>
+                                <a href="{% url 'billing:invoice_detail' invoice.id %}" class="btn btn-sm btn-primary">View</a>
                             </td>
                         </tr>
                         {% empty %}
